--- a/8-view-engine/package.json
+++ b/8-view-engine/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "8-view-engine",
+  "name": "8-view-emgine",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jquery": "^3.6.0",
     "morgan": "^1.10.0"
   }
 }
