--- a/multipages_project/.env
+++ b/multipages_project/.env
@@ -1,1 +1,8 @@
-PORT = 5500
+PORT=5500
+CONTACT_EMAIL = fatihyanik07@gmail.com
+
+# email host configuration
+EMAIL_HOST = mail.coding-school.org
+EMAIL_HOST_PORT = 465
+APP_EMAIL = sananediyorum1@gmail.com
+APP_EMAIL_PASSWORD = 19811988
