--- a/multipages_project/package.json
+++ b/multipages_project/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^15.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
