--- a/14-session/package.json
+++ b/14-session/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-session": "^1.17.2"
   }
 }
