--- a/multipages_project_blog/package.json
+++ b/multipages_project_blog/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "mongoose": "^6.2.3",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
