--- a/18-fileupload/package.json
+++ b/18-fileupload/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "express-fileupload": "^1.3.1"
+    "express-fileupload": "^1.3.1",
+    "mysql": "^2.18.1"
   }
 }
